# CLWrapper

./: .gitmodules  CMakeLists.txt  README.md
CLWrapper/: CMakeLists.txt
CLWrapper/include/: cl_wrapper.hpp
CLWrapper/include/cl_wrapper/: device_manager.hpp  kernel_manager.hpp  logger.hpp  run.hpp
CLWrapper/src/: device_manager.cpp  kernel_manager.cpp  logger.cpp  run.cpp
scripts/: format_src.sh
tests/test/: CMakeLists.txt  add.cl  main.cpp
tests/test_device_selection/: CMakeLists.txt  add.cl  main.cpp
tests/test_image_buffer/: CMakeLists.txt  kernel.cl  main.cpp
